# flowmetrics

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  _config.yml  compose.yml  pyproject.toml
.github/workflows/: materialise.yml  materialize.yml  test.yml
docs/: DECISIONS.md  FORECAST.md  GLOSSARY.md  HOWTO.md  METRICS.md  METRICS.md.archive  OPERATIONS.md  PLAN-issue-pr-stitching.md  REFERENCE.md  SCREENSHOTS.md  SPEC-github-labels.md  SPEC-issue-pr-stitching.md  SPEC-step-matching.md  SPEC-warehouse-app-v0-multi-user.md.archive  SPEC-warehouse-app.md  TASKS-issue-pr-stitching.md  TUNING.md  TUTORIAL.md  glossary.md  index.md  reference.md  regen-screenshots.sh  tutorial.md
docs/explain/: decisions.md  forecasting.md  github-labels.md  index.md  screenshots.md
docs/howto/: add-workflow-in-browser.md  backup-and-restore.md  deploy-with-docker.md  develop-from-source.md  extract-metrics-for-agents.md  fetch-data.md  index.md  install.md  run-as-persistent-server.md  run-dashboard-locally.md  schedule-fetches.md  troubleshooting.md  upgrade.md  write-workflow-yaml.md
docs/ideas/: flowmetrics-single-operator-multi-instance.md
samples/: README.md  SAMPLES.md  aging_sample.html  github-pr-labels.yaml  github-pr-review-cycle.yaml  github-with-explicit-states.yaml  index.html  jira-bigtop.yaml  jira-cassandra.yaml
samples/ASF_BIGTOP/: aging.html  aging.json  aging.txt  cfd.html  cfd.json  cfd.txt  efficiency-week.html  efficiency-week.json  efficiency-week.txt  efficiency.html  efficiency.json  efficiency.txt  forecast-how-many.html  forecast-how-many.json  forecast-how-many.txt  forecast-when-done.html  forecast-when-done.json  forecast-when-done.txt  scatterplot.html  scatterplot.json  scatterplot.txt
samples/ASF_CASSANDRA/: aging.html  aging.json  aging.txt  cfd.html  cfd.json  cfd.txt  efficiency-week.html  efficiency-week.json  efficiency-week.txt  efficiency.html  efficiency.json  efficiency.txt  forecast-how-many.html  forecast-how-many.json  forecast-how-many.txt  forecast-when-done.html  forecast-when-done.json  forecast-when-done.txt  scatterplot.html  scatterplot.json  scatterplot.txt
samples/CalcMark_go-calcmark/: aging.html  aging.json  aging.txt  cfd.html  cfd.json  cfd.txt  efficiency-week.html  efficiency-week.json  efficiency-week.txt  efficiency.html  efficiency.json  efficiency.txt  forecast-how-many.html  forecast-how-many.json  forecast-how-many.txt  forecast-when-done.html  forecast-when-done.json  forecast-when-done.txt  scatterplot.html  scatterplot.json  scatterplot.txt
samples/astral-sh_uv/: aging.html  aging.json  aging.txt  cfd.html  cfd.json  cfd.txt  efficiency-week.html  efficiency-week.json  efficiency-week.txt  efficiency.html  efficiency.json  efficiency.txt  forecast-how-many.html  forecast-how-many.json  forecast-how-many.txt  forecast-when-done.html  forecast-when-done.json  forecast-when-done.txt  scatterplot.html  scatterplot.json  scatterplot.txt
samples/huggingface_transformers/: aging.html  aging.json  aging.txt  cfd.html  cfd.json  cfd.txt  efficiency-week.html  efficiency-week.json  efficiency-week.txt  efficiency.html  efficiency.json  efficiency.txt  forecast-how-many.html  forecast-how-many.json  forecast-how-many.txt  (+6 more)
scripts/: check_vega_spec.js  generate_samples.py  screenshot_sample.sh
tasks/: plan.md  todo.md
tests/: conftest.py  test_acceptance_week.py  test_aging.py  test_aging_component.py  test_backfill.py  test_bg.py  test_bg_launchd.py  test_bg_launchd_materialize.py  test_bg_systemd.py  test_builder_steps_e2e.py  test_builder_ux.py  test_calendar_cycle_time.py  test_cfd.py  test_cfd_component.py  test_cfd_daily_metrics.py  test_cfd_window_e2e.py  test_chart_percentiles.py  test_chart_tooltip_safety.py  test_charts_aging.py  test_charts_cfd.py  test_charts_cycle_time.py  test_charts_data_source.py  test_charts_forecast.py  test_charts_primitives.py  test_charts_throughput.py  test_cli_format.py  test_cluster.py  test_compute.py  test_contract_edit.py  test_contract_states.py  test_contract_store.py  test_contract_v2.py  test_contracts_api.py  test_contracts_archive_api.py  test_contracts_db.py  test_cross_platform_subprocess.py  test_cycle_time_component.py  test_dashboard_sections.py  test_data_source_component.py  test_data_source_e2e.py  (+70 more)
(+178 files in other folders)
